# turboquant-llama

./: AGENTS.md  README.md  Start-Llama-Server-CUDA.cmd  Start-Llama-Server-Vulkan.cmd  models-cuda.ini  models-vulkan.ini  pyproject.toml  vulkan-port-plan.md
common/: arg.cpp
docs/: FIRST-TIME-SETUP.md  FORK-CHANGES.md  OPERATOR-RUNTIME.md
ggml/include/: ggml.h
ggml/src/: ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp
ggml/src/ggml-cuda/: CMakeLists.txt  fattn-common.cuh  fattn.cu  ggml-cuda.cu
ggml/src/ggml-metal/: ggml-metal.metal
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: flash_attn_base.glsl  turbo_wht.comp  types.glsl  vulkan-shaders-gen.cpp
gguf-py/: pyproject.toml
gguf-py/gguf/: constants.py
requirements/: requirements-convert_legacy_llama.txt  requirements-tool_bench.txt
scripts/snapdragon/qdc/: requirements.txt
src/: llama-context.cpp  llama-graph.cpp  llama-kv-cache.cpp  llama-model-loader.cpp  llama-model.cpp
src/models/: qwen35.cpp  qwen35moe.cpp  qwen3next.cpp
tools/mtmd/: requirements.txt
tools/server/tests/: requirements.txt
tools/server/webui/: package-lock.json
